--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,6 +30,14 @@ jobs:
       with:
         go-version: '1.24'
 
+    - name: Run security checks
+      run: |
+        go install golang.org/x/vuln/cmd/govulncheck@latest
+        govulncheck ./...
+
+        go install github.com/securego/gosec/v2/cmd/gosec@latest
+        gosec ./...
+
     - name: Install dependencies
       run: |
         go mod tidy
